# skill-growth-garden

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile
.github/workflows/: ci-backend.yml  ci-frontend.yml
agent-runner/: audit.py  gate.py  requirements.txt  runner.py
backend/: AGENTS.md  CLAUDE.md  main.py  pyproject.toml
contracts/: API_Spec.md  README.md  api_types.ts  db_schema.md  openapi.json
docker/: Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  Dockerfile.test  Dockerfile.tester  docker-compose.agents.yml  docker-compose.dev.yml  docker-命令手册.md  run-backend-reviewer.sh  run-backend-test.sh  run-backend-worker.sh  run-frontend-reviewer.sh  run-frontend-test.sh  run-frontend-worker.sh
docs/: PIPELINE_LOG.md  README.md
docs/adr/: 0001-no-diary-text-on-server.md
docs/architecture/: 01-架构选型-langgraph.md  02-monorepo-文档-注释规范.md  03-硬边界-沙箱-CI.md  04-硬件与资源.md  05-AI工作留痕-文档管理.md  README.md
docs/devlog/: README.md
godot/: AGENTS.md  CLAUDE.md  project.godot
orchestrator/: CLAUDE.md  graph.py  initial.md  mini.py  requirements.txt
tests/backend/: AGENTS.md  CLAUDE.md
tests/frontend/: AGENTS.md
